// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumbs Playground 1`] = `
<nav
  aria-label="Breadcrumbs"
  className="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    className="MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Design System
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-3 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Components
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        aria-current="page"
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-4 MuiTypography-body2 MuiTypography-colorTextPrimary"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Breadcrumbs
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Components/Breadcrumbs Separated By Hyphens 1`] = `
<nav
  aria-label="Breadcrumbs"
  className="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    className="MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Design System
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      -
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-3 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Components
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      -
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        aria-current="page"
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-4 MuiTypography-body2 MuiTypography-colorTextPrimary"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Breadcrumbs
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Components/Breadcrumbs Separated By Right Angle Quote 1`] = `
<nav
  aria-label="Breadcrumbs"
  className="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    className="MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Design System
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      &gt;
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-3 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Components
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      &gt;
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        aria-current="page"
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-4 MuiTypography-body2 MuiTypography-colorTextPrimary"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Breadcrumbs
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Components/Breadcrumbs Separated By Slashes 1`] = `
<nav
  aria-label="Breadcrumbs"
  className="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    className="MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Design System
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-3 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Components
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        aria-current="page"
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-4 MuiTypography-body2 MuiTypography-colorTextPrimary"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Breadcrumbs
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Components/Breadcrumbs With Icons And Body 1 1`] = `
<nav
  aria-label="Breadcrumb"
  className="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    className="MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-body1 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="MuiBox-root MuiBox-root-5 NatDSSpacing-root-3 NatDSSpacing-root-4"
        >
          <i
            aria-hidden={true}
            className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-6 NatDSIcon-root-7"
          >
            outlined-navigation-home
          </i>
        </div>
        Design System
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-8 MuiTypography-body1 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Components
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        aria-current="page"
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-9 MuiTypography-body1 MuiTypography-colorTextPrimary"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Breadcrumbs
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Storyshots Components/Breadcrumbs With Icons And Body 2 1`] = `
<nav
  aria-label="Breadcrumbs"
  className="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    className="MuiBreadcrumbs-ol"
  >
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-2 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="MuiBox-root MuiBox-root-5 NatDSSpacing-root-3 NatDSSpacing-root-4"
        >
          <i
            aria-hidden={true}
            className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-home NatDSIcon-root-6 NatDSIcon-root-7"
          >
            outlined-navigation-home
          </i>
        </div>
        Design System
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover NatDSLink-default-1 NatDSLink-default-8 MuiTypography-body2 MuiTypography-colorInherit"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Components
      </a>
    </li>
    <li
      aria-hidden={true}
      className="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      className="MuiBreadcrumbs-li"
    >
      <a
        aria-current="page"
        className="MuiTypography-root MuiLink-root MuiLink-underlineNone NatDSLink-default-1 NatDSLink-default-9 MuiTypography-body2 MuiTypography-colorTextPrimary"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        Breadcrumbs
      </a>
    </li>
  </ol>
</nav>
`;
